# eenn

./: .gitignore  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  PLANNED_FEATURES.md  README.md
.github/workflows/: rust.yml
benches/: partitioner_bench.rs  rehydration_bench.rs  simple_bench.rs
crates/shaders_common/: Cargo.toml
crates/shaders_common/src/: lib.rs
crates/shaders_front/: Cargo.toml
crates/shaders_front/src/: lib.rs
crates/shaders_gpu/: Cargo.toml  build.rs
crates/shaders_gpu/src/: lib.rs  shaders.rs
docs/: manifest_schema.json  runtime_partitioning_and_precompile_design.md  sample_signed_manifest.json
examples/: precompile_example.rs
src/: calibration.rs  cpu_backend.rs  fingerprint.rs  function_registry.rs  gpu_backend.rs  kernel_cache.rs  lib.rs  main.rs  models.rs  node.rs  observability.rs  partitioner.rs  precompile_worker.rs  signature.rs  tensor.rs
tests/: archived_borrow.rs  basic.rs  bench_unchecked.rs  gpu_integration.rs  manifest_canonicalization.rs  manifest_validator.rs  node_adapters.rs  node_integration.rs  partitioner_integration.rs  partitioner_lookahead.rs  precompile_task_started_cancel.rs  precompile_worker_integration.rs  precompile_worker_shutdown.rs  serialize.rs  serialize_rkyv.rs  spirv_roundtrip.rs
